# llm-injection-sandbox

./: .gitignore  ATTACK_DIAGRAM.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
sandbox/assets/: secret.txt
sandbox/cli/: main.py
sandbox/core/: __init__.py  adapter.py  docker_sandbox.py  evaluator.py  report.py  runner.py  secrets.py  types.py
sandbox/scenarios/: __init__.py  file_injection.py  registry.py  tool_output_injection.py
tests/: test_adapter.py  test_docker_sandbox.py  test_evaluator.py  test_report.py  test_runner.py  test_scenarios.py
