[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-injection-sandbox"
version = "0.1.0"
description = "Prompt injection benchmark framework for local AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sandbox = "sandbox.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]
